Replace three dashes (---) with proper em dashes (—)

--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -37,7 +37,7 @@ The seven project grant renewals in this wave are:
   Signer](/blog/bitcoin-grants-july-2024#validating-lightning-signer)
 
 Together, these twelve projects highlight a shared goal: making Bitcoin more
-decentralized, transparent, and user-driven---while keeping it robust, usable,
+decentralized, transparent, and user-driven—while keeping it robust, usable,
 and open to anyone who chooses to participate.
 
 None of this would be possible without the generosity of our donors. If you'd
@@ -190,7 +190,7 @@ advances Bitcoin, we encourage you to [apply for funding](/apply).
 
 Including this round of funding, OpenSats is proud to have [allocated more than
 $15MM](/transparency) to Bitcoin projects since the creation of our General
-Fund---marking an important milestone in our mission to support critical tools,
+Fund—marking an important milestone in our mission to support critical tools,
 infrastructure, and developers across the ecosystem.
 
 These grants are made possible by the generosity of our donors. If you'd like to
