--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -88,8 +88,9 @@ License: MIT
 eHash ecash tokens for each accepted mining share. It runs a modified Stratum V2
 pool, mints blinded tokens, and enables anonymous mining and trading of shares.
 [Axepool](https://hashpool.dev/dev-logs/dev-log-2025-04-05/#axepool) is a proxy
-layer for small-scale miners. It uses the Cashu protocol to simplify setup,
-eliminate accounts, and support frequent ecash payouts.
+layer for small-scale miners, such as [Bitaxes](https://bitaxe.org/). It uses 
+the Cashu protocol to simplify setup, eliminate accounts, and support frequent 
+ecash payouts.
 
 With support from this grant, the project will complete
 [NUT-04](https://github.com/cashubtc/nuts/blob/main/04.md) compliant ecash
@@ -109,8 +110,8 @@ License: MIT
 
 ### Sovran
 
-[Sovran](https://sovran.money) is a free and open-source ecash wallet built for
-iOS. It is designed to improve usability across
+[Sovran](https://sovran.money) is a free and open-source ecash and Lightning 
+wallet built for iOS. It is designed to improve usability across
 [Cashu](https://cashu.space/)-based payments. The app supports multiple mints,
 NFC-based transactions, and integrates native connectivity tools like eSIM and
 VPN. Sovran has reached a stable release and ships with core Cashu
