--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -194,8 +194,8 @@ $15MM](/transparency) to Bitcoin projects since the creation of our General
 Fund—marking an important milestone in our mission to support critical tools,
 infrastructure, and developers across the ecosystem.
 
-In total, OpenSats has now issued over 300 grants across both the General Fund
-and The Nostr Fund, underscoring the scale and reach of our commitment to
+In total, OpenSats has now issued over 300 grants across both the _General Fund_
+and _The Nostr Fund_, underscoring the scale and reach of our commitment to
 open-source builders.
 
 These grants are made possible by the generosity of our donors. If you'd like to
