Use "recurring" button

--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -45,7 +45,7 @@ like to help move Bitcoin forward by supporting projects like those in this
 wave, consider donating to our General Fund.
 
 <center>
-    <DonateToGeneralFundButton/>
+    <DonateRecurringButton/>
 </center>
 
 Let's explore our first-time project grants to understand what they're building
@@ -203,5 +203,5 @@ support the next wave of free and open-source Bitcoin development, consider
 donating to our General Fund. Every sat helps.
 
 <center>
-    <DonateToGeneralFundButton/>
+    <DonateRecurringButton/>
 </center>
