Use regular donate button up top

--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -45,7 +45,7 @@ like to help move Bitcoin forward by supporting projects like those in this
 wave, consider donating to our General Fund.
 
 <center>
-    <DonateRecurringButton/>
+    <DonateToGeneralFundButton/>
 </center>
 
 Let's explore our first-time project grants to understand what they're building
