--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -199,8 +199,8 @@ and _The Nostr Fund_, underscoring the scale and reach of our commitment to
 open-source builders.
 
 These grants are made possible by the generosity of our donors. If you'd like to
-support the next wave of free and open-source Bitcoin development, consider
-donating to our General Fund. Every sat helps.
+help make the future of free and open-source Bitcoin development more sustainable, consider
+setting up a recurring donation to one of our funds. Any amount helps.
 
 <center>
     <DonateRecurringButton/>
