--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -56,7 +56,7 @@ and how it strengthens the broader Bitcoin landscape.
 ### Bitcoin Research Kit
 
 Bitcoin Research Kit (BRK) is a toolchain that parses, indexes, computes, and
-visualizes data from a Bitcoin Core node. It combines the functions of
+visualizes data from a Bitcoin Core node. It aims to combine the functions of
 [Glassnode](https://glassnode.com/), [mempool.space](https://mempool.space/),
 and [electrs](https://github.com/romanz/electrs#) in one self-hostable package.
 The project focuses on performance, low resource requirements, and ease of use.
