--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -87,11 +87,12 @@ BOLT11](https://www.nuget.org/packages/NLightning.Bolt11/0.2.0), and maintains
 over 70% test coverage.
 
 Support from this grant will fund further implementation of BOLT 4, BOLT 5, and
-BOLT 7. The project will complete a full Lightning daemon with channel
+BOLT 7. The project aims to complete a full Lightning daemon with channel
 operations, [HTLC](https://bitcoinops.org/en/topics/htlc/) handling, and payment
 routing. Additional work will improve data structures, backup systems, developer
-tooling, and documentation. Test coverage and fuzz testing will expand, leading
-to a production-ready Lightning node for .NET developers and enterprise users.
+tooling, and documentation. One of the upcoming goals of the project is to
+expand test coverage and fuzz testing to make the implementation more robust and
+production-ready.
 
 Repository: [ipms-io/nlightning](https://github.com/ipms-io/nlightning)  
 License: MIT
