Update wording & link to /transparency

--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -190,9 +190,9 @@ clear [criteria](/apply#criteria) aligned with [our mission](/mission) of
 supporting free and open-source software. If you're working on a project that
 advances Bitcoin, we encourage you to [apply for funding](/apply).
 
-In total, OpenSats has now issued over 300 grants across both the _General Fund_
-and _The Nostr Fund_, underscoring the scale and reach of our commitment to
-open-source builders.
+In total, OpenSats has now issued [over 300 grants](/transparency) since the
+[start of our grant program][start], underscoring the scale and reach of our
+commitment to open-source builders.
 
 These grants are made possible by the generosity of our donors. If you'd like to
 help make the future of free and open-source Bitcoin development more
@@ -202,3 +202,5 @@ amount helps.
 <center>
     <DonateRecurringButton/>
 </center>
+
+[start]: /blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall
