--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -194,7 +194,7 @@ In total, OpenSats has now issued [over 300 grants](/transparency) since the
 [start of our grant program][start], underscoring the scale and reach of our
 commitment to open-source builders.
 
-These grants are made possible by the generosity of our donors. If you'd like to
+Our work is made possible by the generosity of our donors. If you'd like to
 help make the future of free and open-source Bitcoin development more
 sustainable, consider setting up a recurring donation to one of our funds. Any
 amount helps.
