--- a/data/blog/twelfth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/twelfth-wave-of-bitcoin-grants.mdx
@@ -2,7 +2,7 @@
 title: "Twelfth Wave of Bitcoin Grants"
 date: '2025-07-08'
 tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
-authors: ['arvin', 'default']
+authors: ['arvin', 'dergigi', 'default']
 images: ['/static/images/blog/81-twelfth-wave-of-bitcoin-grants.jpg']
 draft: false
 summary: "OpenSats is funding twelve more open-source projects advancing the Bitcoin ecosystem."
