--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -76,6 +76,7 @@ as in the internal and external processes of our organization.
 - [2024-Q3](/docs/minutes/2024-Q3.pdf)
 - [2024-Q4](/docs/minutes/2024-Q4.pdf)
 - [2025-Q1](/docs/minutes/2025-Q1.pdf)
+- [2025-Q2](/docs/minutes/2025-Q2.pdf)
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
