Remove double quotation marks + add a new blockquote

--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -71,22 +71,23 @@ BDK](https://bookofbdk.com/), containing straightforward guides, upgrade paths
 from older versions, and real-world reusable code snippets that save developers
 time.
 
-"The mission of the BDK team is to provide the best FOSS libraries for building
-secure, modern bitcoin apps and services. With the 1.0+ releases now in the
-hands of thousands of users through projects like
-[Bitkey](https://github.com/proto-at-block/bitkey) and
-[ProtonWallet](https://github.com/ProtonWallet), we have begun to achieve this
-mission. Moreover, with projects like
-[AnchorWatch](https://www.anchorwatch.com/),
-[FrostSnap](https://github.com/frostsnap/frostsnap),
-[Cove](https://github.com/bitcoinppl/cove), and [Bitcoin
-Safe](https://github.com/andreasgriffin/bitcoin-safe), we continue to support
-innovative new layer one wallets. Looking forward, we also see BDK playing a
-strong supporting role for layer two projects like
-[ldk-node](https://github.com/lightningdevkit/ldk-node) and [Second's
-bark](https://codeberg.org/ark-bitcoin/bark). If there is a bitcoin project you
-want to see in the world, BDK will help you build it." --Steve Myers, BDK
-director/core contributor
+>The mission of the BDK team is to provide the best FOSS libraries for building
+>secure, modern bitcoin apps and services. With the 1.0+ releases now in the
+>hands of thousands of users through projects like
+>[Bitkey](https://github.com/proto-at-block/bitkey) and
+>[ProtonWallet](https://github.com/ProtonWallet), we have begun to achieve this
+>mission. Moreover, with projects like
+>[AnchorWatch](https://www.anchorwatch.com/),
+>[FrostSnap](https://github.com/frostsnap/frostsnap),
+>[Cove](https://github.com/bitcoinppl/cove), and [Bitcoin
+>Safe](https://github.com/andreasgriffin/bitcoin-safe), we continue to support
+>innovative new layer one wallets. Looking forward, we also see BDK playing a
+>strong supporting role for layer two projects like
+>[ldk-node](https://github.com/lightningdevkit/ldk-node) and [Second's
+>bark](https://codeberg.org/ark-bitcoin/bark). If there is a bitcoin project you
+>want to see in the world, BDK will help you build it.
+>
+>—Steve Myers, BDK director/core contributor
 
 Another OpenSats-supported project, [Tor Support for
 BDK](/blog/bitcoin-grants-july-2024#tor-support-for-bdk--fedimint),
@@ -191,9 +192,9 @@ easier-to-use constructors and corrections for subtle off-by-one errors in
 height-based checks, making it simpler to create transactions that unlock only
 after a specific block or time.
 
->"My job is to provide libraries so other devs can create software that users
+>My job is to provide libraries so other devs can create software that users
 >love. If no one ever mentions rust-bitcoin while simultaneously using it every
->day, then we win." 
+>day, then we win.
 >
 >—Tobin Harding
 
@@ -217,12 +218,12 @@ prevents hex-encoding crashes during signing and hashing. Behind the scenes, he
 fixed broken fuzz tests and updated GitHub Actions to keep automated checks
 running smoothly, helping ensure safety across the entire `rust-bitcoin` stack.
 
->"Testing is an important part of software development, which isn't always
+>Testing is an important part of software development, which isn't always
 >treated as such. There are often poorly written tests that are hard to read, and
 >some don't test what they set out to... Writing and improving tests for all of
 >the missed mutants requires an understanding of what the code being tested does,
 >which has been a good way to learn about the software while also doing something
->useful." 
+>useful.
 >
 >—Jamil Lambert
 
