Edit to add recurring donate button

--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -586,7 +586,7 @@ and decentralized network. To support projects like these and others, please
 consider making a recurring donation to the General Fund.
 
 <center>
-    <DonateToGeneralFundButton/>
+    <DonateRecurringButton/>
 </center>
 
 If you're a developer advancing free and open-source software that helps Bitcoin
