--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'bitcoin', 'impact', 'libraries']
 authors: ['default', 'arvin']
 images: ['/static/images/blog/82-advancements-in-developer-libraries.jpg']
 draft: false
-summary: "OpenSats is funding twelve more open-source projects advancing the Bitcoin ecosystem."
+summary: "An impact report from the front-lines of Bitcoin developer libraries."
 ---
 
 Reliable, well-audited developer libraries are the hidden plumbing of bitcoin.
