--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -399,7 +399,7 @@ middleman.
 Payjoin is a protocol for batching bitcoin transactions that improves on-chain privacy by
 breaking the common-input-ownership heuristic while reducing fees.
 The [Payjoin Dev Kit](https://github.com/payjoin), a Rust-based
-library led by developer [Dan Gould](https://github.com/bitgould), addresses
+library led by developer [Dan Gould](https://github.com/DanGould), addresses
 adoption barriers by providing a modular, developer-friendly toolkit to
 integrate into wallets, nodes, and payment applications.
 
