--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -424,7 +424,7 @@ to
 [0.24](https://github.com/payjoin/rust-payjoin/blob/master/payjoin/CHANGELOG.md#0240),
 gained a simpler interface, landed on HPKE-encrypted Oblivious HTTP
 transport to protect data without heavy Tor or TLS dependencies, and recently introduced
-a session-event log, creating a for standard way for implementors to display transaction
+a session-event log, creating a standard way for implementors to display transaction
 history in apps and throw errors. It now
 records more than twenty thousand downloads. The
 [`payjoin-cli`](https://crates.io/crates/payjoin-cli) matured into a stable tool
