Edit content for additional clarity and hyperlinking
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -422,8 +422,7 @@ The specification was born from iterations of working code. The Rust `payjoin`
 [0.11](https://github.com/payjoin/rust-payjoin/blob/master/payjoin/CHANGELOG.md#0110)
 to
 [0.24](https://github.com/payjoin/rust-payjoin/blob/master/payjoin/CHANGELOG.md#0240),
-gained a simpler interface, landed on HPKE-encrypted Oblivious HTTP
-transport to protect data without heavy Tor or TLS dependencies, and recently introduced
+gaining a simpler interface, implemented [HPKE-encrypted Oblivious HTTP](https://ietf-wg-ohai.github.io/oblivious-http/draft-ietf-ohai-ohttp.html) to help protect data without heavy Tor or TLS dependencies, and recently introduced
 a session-event log, creating a standard way for implementors to display transaction
 history in apps and throw errors. It now
 records more than twenty thousand downloads. The
