--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -466,7 +466,7 @@ protocol test framework that checks whether every implementation interprets the
 lnprototest](/blog/advancements-in-lightning-infrastructure#lnprototest),
 driven by [support from
 OpenSats](/blog/bitcoin-grants-july-2024#lightning-network-protocol-test-framework),
-the initiative has progressed from a Core Lightning utility to a
+has progressed from a Core Lightning utility to a
 cross-implementation suite used in continuous-integration pipelines across Rust,
 Python, and other software stacks.
 
