--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -544,7 +544,7 @@ indexes](https://github.com/ElementsProject/lightning/pull/7465) and record
 [multi-transaction
 closes](https://github.com/ElementsProject/lightning/pull/7466) to improve audit
 trails. Smaller protocol adjustments accept commitment signature batches in any
-order, align channel reestablish logic with Eclair, and add sanity checks that
+order, aligning channel reestablishment logic with Eclair, and add sanity checks that
 prevent phantom confirmations.
 
 On the Rust side, contributor [optout21](https://github.com/optout21) refactored
