Edit to add hyphens
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -563,7 +563,7 @@ A recent patch [rotates funding
 keys](https://github.com/lightningdevkit/rust-lightning/pull/3624) after each
 splice for added safety. A working prototype flows through [`ldk
 node`](https://github.com/lightningdevkit/ldk-node), allowing wallet teams to
-test pay after splice and splice after pay flows. Weekly splice sync calls feed
+test pay-after-splice and splice-after-pay flows. Weekly splice sync calls feed
 lessons learned from these tests back into the specification process.
 
 Interoperability has been proven, script-driven workflows are live, and fuzz
