Edit to add html citation tags

--- a/data/blog/advancements-in-developer-libraries.mdx
+++ b/data/blog/advancements-in-developer-libraries.mdx
@@ -87,7 +87,7 @@ time.
 >bark](https://codeberg.org/ark-bitcoin/bark). If there is a bitcoin project you
 >want to see in the world, BDK will help you build it.
 >
->—Steve Myers, BDK director/core contributor
+><cite>—Steve Myers, BDK director/core contributor</cite>
 
 Another OpenSats-supported project, [Tor Support for
 BDK](/blog/bitcoin-grants-july-2024#tor-support-for-bdk--fedimint),
@@ -196,7 +196,7 @@ after a specific block or time.
 >love. If no one ever mentions rust-bitcoin while simultaneously using it every
 >day, then we win.
 >
->—Tobin Harding
+><cite>—Tobin Harding</cite>
 
 In parallel, [Jamil Lambert](https://github.com/jamillambert) focused on making
 the rust-bitcoin codebase more reliable through better testing and safeguards.
@@ -225,7 +225,7 @@ running smoothly, helping ensure safety across the entire `rust-bitcoin` stack.
 >which has been a good way to learn about the software while also doing something
 >useful.
 >
->—Jamil Lambert
+><cite>—Jamil Lambert</cite>
 
 Additionally, OpenSats grantee Robert Netzke
 ([rustaceanrob](https://github.com/rustaceanrob)) implemented policy-level
