Edit to remove past tense (passed -> passes)

--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -189,7 +189,7 @@ From reproducible Tor binaries and live-OS hardening to Silent Payments
 stewardship and rigorous Core review, this thirteenth wave strengthens Bitcoin's
 technical foundation and broadens user choice.
 
-Every grant application has passed a [mission-aligned](/mission) review process.
+Every grant application has passes a [mission-aligned](/mission) review process.
 If you're building free and open-source Bitcoin software that advances
 decentralization and user sovereignty, we invite you to [apply for
 funding](/apply).
