Edit to add em dashes

--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -30,9 +30,9 @@ Grant renewals:
 - [Blitz Wallet](/blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet)
 - [Caring for Core](/blog/caring-for-bitcoin-core#hodlinator)
 
-Each project addresses a specific need---from drop-in Tor libraries and Silent
+Each project addresses a specific need—from drop-in Tor libraries and Silent
 Payments coordination to sat-sized, account-free Lightning paywalls, hardened
-live-OS builds, and merchant-ready e-cash wallets---strengthening privacy and
+live-OS builds, and merchant-ready e-cash wallets—strengthening privacy and
 usability across the stack.
 
 The ability to support these projects is made possible by the generosity of our
@@ -66,9 +66,9 @@ simply updating its `kmp‑tor` version.
 With support from this grant, maintainer [Matthew
 Nelson](https://github.com/05nelsonm) will extend hardware coverage in the
 companion [`kmp‑tor‑resource`](https://github.com/05nelsonm/kmp-tor-resource)
-repository---adding `riscv64` builds for `Linux‑libc`,
+repository—adding `riscv64` builds for `Linux‑libc`,
 `aarch64`/`riscv64`/`x86`/`x86_64` for `Linux‑musl`, and
-`aarch64`/`x86`/`x86_64` for `FreeBSD`---and complete support for Tor's roughly
+`aarch64`/`x86`/`x86_64` for `FreeBSD`—and complete support for Tor's roughly
 350 configuration options (about 250 implemented today). These milestones will
 keep `kmp‑tor` a dependable drop‑in Tor solution across the Bitcoin ecosystem.
 
@@ -116,7 +116,7 @@ With support from this grant, the project will release fully documented Swift
 and Kotlin bindings, launch TestFlight and closed Android betas with local token
 storage, and publish public builds in the App Store and Google Play. Efforts
 will then shift to remote cloud backup, NFC tap-to-pay, and other
-merchant-centric features---advancing toward the open-source "Cash App"
+merchant-centric features—advancing toward the open-source "Cash App"
 experience for Cashu.
 
 Repository:
@@ -161,7 +161,7 @@ Payments](/blog/developing-advancements-in-onchain-privacy#silent-payments)
 (`BIP-352`) ecosystem. Project maintainer
 [MacGyver](https://github.com/macgyver13) curates a live developer dashboard,
 keeps specifications in sync, and collaborates with wallet teams to integrate
-Silent Payments---reusable-address that let senders create one-time
+Silent Payments—reusable-address that let senders create one-time
 [Taproot](https://bitcoinops.org/en/topics/taproot/) outputs without any
 on-chain or out-of-band signalling,  improving privacy for payroll and other
 payment workflows. By pairing project-management discipline with hands-on
